chore: Gh actions checkout repository

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: [self-hosted]
     steps:
       - name: "Repo Checkout"
-        uses: gusgewehr/checkout@v3
+        uses: gusgewehr/BragiWebhook
       - name: "Create dir"
         run: mkdir -p /opt/bragi/webhook
       - name: "Copy to dir"
